# Spisok

./: CMakeLists.txt  README.md
includes/: check.h  clone.h  delete.h  init.h  insert.h  list.h  show.h  sizing.h
src/: check.c  clone.c  delete.c  init.c  insert.c  main.c  show.c  sizing.c
